fix: security audit — 23 bug fixes and vulnerability patches - Fix CORS wildcard origin bypass (CorsConfig disabled) - Fix privilege escalation: users can no longer self-assign ADMIN role - Fix password hash leakage in API responses (removed from UserDTO) - Fix hardcoded weak JWT secret with proper 256-bit key - Fix deleteRoom missing {id} path variable (was always 500) - Fix room update ignoring equipment field - Fix user enumeration via distinct login error messages - Fix JWT filter returning 500 on malformed/expired tokens - Fix token response key malformed ('token: ' -> 'token') - Add input validation (@Valid, @NotBlank, @Email, @Size, @Min) - Add GlobalExceptionHandler (no more stack trace leakage) - Add @PreAuthorize('ADMIN') to Room CUD operations - Add RegisterDTO (separates registration from internal UserDTO) - Add logging to auth service and JWT filter - Parameterize ddl-auto and CORS origins via env vars - Remove @Service from interfaces - Fix DTO field visibility (public -> private) - Update AuthTest for new RegisterDTO API